# Trading

./: .gitignore  AMZN_model.pth  README.md  alternative_data_sources.py  best_model.pth  check_training.sh  data_storage.py  integrated_pipeline.py  lstm_predictor.py  news.xlsx  requirements.txt  secret_key.py  stock_analysis_complete.xlsx  stock_analysis_complete_backup.xlsx  testing.py  web_scraping.py
aws-stock-platform/backend/: integrated_pipeline.py  serverless.yml  test_local_prediction.py
aws-stock-platform/backend/lambda-functions/data-fetch/: handler.py  requirements.txt
aws-stock-platform/backend/lambda-functions/orchestrator/: handler.py  requirements.txt
aws-stock-platform/backend/lambda-functions/predictions/: handler.py  requirements.txt  test_handler.py
aws-stock-platform/backend/lambda-functions/training/: handler.py  requirements.txt
aws-stock-platform/backend/lambda-functions/websocket/: handler.py
aws-stock-platform/backend/utils/: alternative_data_sources.py  data_storage.py
config/: __init__.py  settings.py  settings_fast.py
cpp/: CMakeLists.txt  fix_logging.ps1  fix_logging2.ps1  vcpkg.json
cpp/include/trading/config/: secret_key.hpp  settings.hpp
cpp/include/trading/data/: ohlcv.hpp  yahoo_client.hpp
cpp/include/trading/features/: alpha_formula.hpp  alpha_generator.hpp  scaler.hpp  technical_indicators.hpp
cpp/include/trading/models/: dataset.hpp  losses.hpp  lstm_modules.hpp  metrics.hpp  return_predictor.hpp  trainer.hpp
cpp/include/trading/storage/: excel_handler.hpp
cpp/include/trading/util/: logging.hpp  result.hpp
cpp/src/: main.cpp
cpp/src/config/: secret_key.cpp
cpp/src/data/: yahoo_client.cpp
cpp/src/features/: alpha_formula.cpp  alpha_generator.cpp  scaler.cpp  technical_indicators.cpp
cpp/src/models/: dataset.cpp  losses.cpp  lstm_modules.cpp  metrics.cpp  return_predictor.cpp  trainer.cpp
cpp/src/storage/: excel_handler.cpp
cpp/src/util/: logging.cpp
prediction_graphs/: AAPL_model.pth  JPM_model.pth  PEP_model.pth  TM_model.pth  best_model.pth
scripts/: run_pipeline.py
src/: __init__.py
src/data/: __init__.py
src/data/collectors/: __init__.py  fred_collector.py  news_collector.py  sec_collector.py  stock_collector.py
src/data/processors/: __init__.py  company_validator.py  sentiment_analyzer.py  technical_indicators.py
src/data/storage/: __init__.py  cache_manager.py  excel_handler.py
src/features/: __init__.py  alpha_computer.py  alpha_generator.py  feature_engineering.py  feature_selector.py
src/models/: __init__.py
src/models/architectures/: __init__.py  dual_stream_lstm.py  ensemble.py  lstm_modules.py
src/models/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/training/: __init__.py  dataset.py  losses.py  trainer.py
src/prediction/: __init__.py  batch_predictor.py  predictor.py
src/utils/: __init__.py  constants.py  helpers.py
src/visualization/: __init__.py  prediction_plots.py  stock_price_plots.py  training_plots.py
